# flutter_rust_bridge

frb_example/with_flutter/ios/Runner/: bridge_generated.h
frb_example/with_flutter/lib/: bridge_generated.dart  main.dart  off_topic_code.dart
frb_example/with_flutter/rust/: Cargo.toml
frb_example/with_flutter/rust/src/: api.rs  bridge_generated.rs
