[package]
name = "flutter_rust_bridge_example"
version = "0.1.0"
edition = "2018"

[lib]
name = "flutter_rust_bridge_example"
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
flutter_rust_bridge = { path = "../../../frb_rust" }
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.0" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.

webrtc = "0.4.0"
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
clap = "3.0.8"
hyper = { version = "0.14.16", features = ["full"] }
#signal = {path = "examples/signal" }
tokio-util = "0.6.9"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
base64 = "0.13.0"
